Fixed bug with btn-contact regarding text wrapping

--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -116,6 +116,7 @@
       .about-me-content {
         flex-direction: column;
         align-items: center;
+
       }
     }
 
@@ -196,6 +197,7 @@
       text-decoration: none;
       font-family: "Open Sans", Arial, sans-serif;
       transition: background 0.2s ease, color 0.2s ease;
+      text-wrap: nowrap;
     }
 
     .btn-contact:hover {
